<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_side"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_address"
            android:textAppearance="?textAppearanceHeadline5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_components"
            android:hint="@string/hint_e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_components"
            android:text="@string/enter_your_password"
            android:textAppearance="?textAppearanceHeadline5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_components"
            android:hint="@string/hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_button_extra_side"
            android:layout_marginTop="@dimen/margin_components"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/orLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_components"
            android:text="@string/or"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceHeadline6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createNewAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_button_extra_side"
            android:layout_marginTop="@dimen/margin_components"
            android:text="@string/create_your_account" />

    </LinearLayout>


</layout>