<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_side"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_message"
            android:textAppearance="?textAppearanceHeadline3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_components"
            android:text="@string/welcome_message_2"
            android:textAppearance="?textAppearanceHeadline5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_check_out_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_button_extra_side"
            android:layout_marginTop="@dimen/margin_components"
            android:text="@string/check_out_instructions" />

    </LinearLayout>
</layout>