<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_side"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:id="@+id/shoe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_label"
                android:text="@{shoe.name}"
                android:textAppearance="?textAppearanceBody1"
                tools:text="Dress Shoes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_components"
                android:text="@string/label_company"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:id="@+id/shoe_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_label"
                android:text="@{shoe.company}"
                android:textAppearance="?textAppearanceBody1"
                tools:text="Valentino" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_components"
                android:text="@string/label_size"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:id="@+id/shoe_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_label"
                android:text="@{shoe.size}"
                android:textAppearance="?textAppearanceBody1"
                tools:text="9.00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_components"
                android:text="@string/label_description"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:id="@+id/shoe_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_label"
                android:text="@{shoe.description}"
                android:textAppearance="?textAppearanceBody1"
                tools:text="@string/dress_shoe_description" />

        </LinearLayout>
    </ScrollView>

</layout>